* buffer.c (syms_of_buffer): DEFSYM Qchoice (Bug#18337).